simpleweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleweb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: simpleweb
          image: yeasy/simple-web:latest
          ports:
            - containerPort: 3000
