simpleweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simpleweb-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-node-port
              servicePort: 3000
